Pal 684 pd104923 (#330)